quickstart config change. now all the settings for the jvm are setup in the quickstart file and loaded in on build